@@ -161,6 +161,8 @@ Other changes:
   works for the code generated by the Sun java compiler. It may not work for
   all compilers.
 
+* <xmlproperty> will no longer fail if the file to be loaded doesn't exist.
+
 Changes from Ant 1.5.1Beta1 to 1.5.1
 ====================================
 
